0.x (upcoming release)
- (feature)     a series can be marked as a similar to another one
- (feature)     series images can be replaced
- (feature)     add preliminary support for hidden images
- (feature)     admin can add a comment to a series
- (improvement) on a country info page show the series with an image

0.4.3
- (feature)        add support for Ukrainian hryvnia
- (feature)        add support for Belarusian ruble
- (feature)        a request that failed to download a file, can be retried
- (infrastructure) migrate to Spring Boot 2
- (infrastructure) apply infrastructure-as-code approach with Terraform

0.4.2
- (feature)        users can add multiple instances of a series into a collection
- (infrastructure) all integration tests now pass on PostgreSQL
- (infrastructure) migrate unit tests from Hamcrest to AssertJ

0.4.1
- (feature) add possibility for search series by catalog number in user's collection (contributed by Mukesh Katariya)
- (ci)      cancel code coverage publishing to codecov.io service

0.4
- (infrastructure) switched to Java8
- (user interface) ported to Bootstrap 3
- (infrastructure) ported to Spring Boot
- (functionality)  implemented possibility to user to add additional images to series
- (functionality)  allow to different series to have the same catalog numbers
- (functionality)  add possibility for search series by catalog number (contributed by Sergey Chechenev)
- (functionality)  add interface for viewing suspicious activity (contributed by Sergey Chechenev)
- (functionality)  allow to users to add categories and countries
- (infrastructure) ported to Spring's JdbcTemplate (get rid of Spring-Data-JPA and Hibernate)
- (functionality)  send daily reports to admin by e-mail
- (infrastructure) use logback (instead of log4j) for logging
- (functionality)  add possibility for adding series sales
- (functionality)  add interface for viewing series sales (contributed by Sergey Chechenev)