@@ -47,6 +47,14 @@ UPDATE series \
  WHERE id = :series_id \
    AND comment IS NULL
 
+series.add_release_year = \
+UPDATE series \
+   SET release_year = :release_year \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND release_year IS NULL
+
 series.mark_as_modified = \
 UPDATE series \
    SET updated_at = :updated_at \
