@@ -3,6 +3,7 @@
 - (feature)     series images can be replaced
 - (feature)     add preliminary support for hidden images
 - (feature)     admin can add a comment to a series
+- (feature)     admin can add a release year to a series
 - (improvement) on a country info page show the series with an image
 
 0.4.3
